[package]
name = "rosettamirror"
version = "0.1.0"
authors = ["dave"]
edition = "2018"

[dependencies]
reqwest = "0.9.9"
url = "1.7.2"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
onig = "4.3.2"
maplit = "1.0.1"
unicode-normalization = "0.1.8"
unicode_categories = "0.1.1"
structopt = "0.2.15"
