[package]
name = "rosettamirror"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
onig = "6.2.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
structopt = "0.3.23"
unicode-normalization = "0.1.19"
unicode_categories = "0.1.1"
url = "2.2.2"
